# commodities-compass

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  package-lock.json  package.json
.github/workflows/: frontend-build.yml
.husky/: pre-commit
backend/: .env.example  .pre-commit-config.yaml  Dockerfile  README.md  nixpacks.toml  pyproject.toml  railway.toml  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 449f56ae2867_initial_migration_with_all_trading_.py  45cf4bc63dfc_update_score_fields_to_decimal_8_2.py  6bb1fe6300fe_add_test_range_table.py  bb99bb79a360_remove_unused_tables_config_performance_.py
backend/app/: lint.py  main.py
backend/app/api/api_v1/: api.py
backend/app/api/api_v1/endpoints/: audio.py  auth.py  commodities.py  dashboard.py  historical.py
backend/app/core/: auth.py  config.py  database.py  excel_mappings.py
backend/app/models/: __init__.py  base.py  config.py  indicator.py  market_research.py  performance_tracking.py  podcast.py  technicals.py  test_range.py  trading.py  weather_data.py
backend/app/schemas/: __init__.py  dashboard.py
backend/app/services/: audio_service.py  dashboard_service.py  dashboard_transformers.py  data_import.py
backend/app/utils/: date_utils.py
excel-sheet/: commodities-compass.xlsx  excel_analysis_results.json
frontend/: .env.example  .env.production  .env.production.example  Dockerfile  README.md  components.json  eslint.config.js  index.html  nixpacks.toml  package.json  railway.toml  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts  dashboard.ts  endpoints.ts
frontend/src/components/: LoadingSpinner.tsx  dashboard-layout.tsx  date-range-picker.tsx  date-selector.tsx  gauge-indicator.tsx  indicators-grid.tsx  news-card.tsx  position-status.tsx  price-chart.tsx  recommendations-list.tsx  weather-update-card.tsx
frontend/src/data/: commodities-data.ts
frontend/src/hooks/: useAuth.ts  useDashboard.ts
frontend/src/pages/: dashboard-page.tsx  login-page.tsx  (+2 more)
scripts/: analyze_excel_data.py  database_schema_suggestions.sql  domain_expert_questions.md  requirements.txt  setup-dev.sh
static-react-app/src/: App.tsx
(+24 files in other folders)
